--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
              <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
                <span class="author-block">
-                <a href="https://yixiaowang7.github.io" target="_blank">Yixiao Wang</a><sup>1</sup><sup>*</sup><sup>&dagger;</sup></span>
+                <a href="" target="_blank">Anonymous Authors</a>
                 <span class="author-block">
-                <a href="" target="_blank">Yifei Zhang</a><sup>1</sup><sup>*</sup></span>
+                <!-- <a href="" target="_blank">Yifei Zhang</a><sup>1</sup><sup>*</sup></span>
                 <span class="author-block">
                 <a href="" target="_blank">Mingxiao Huo</a><sup>2</sup><sup>*</sup><sup>&dagger;</sup></span>
                 <span class="author-block">
@@ -76,15 +76,15 @@
                 <span class="author-block">
                 <a href="" target="_blank">Mingyu Ding</a><sup>1</sup><sup>&ddagger;</sup></span>
                 <span class="author-block">
-                <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span>
+                <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span> -->
                 </div>
-                <div class="is-size-5 publication-authors">
+                <!-- <div class="is-size-5 publication-authors">
                     <span class="author-block"><sup>1</sup>University of California, Berkeley</span>
                     <span class="author-block"><sup>2</sup>Carnegie Mellon University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                     <span class="eql-cntrb"><small><br><sup>&dagger;</sup>Indicates Project Lead</small></span>
                     <span class="eql-cntrb"><small><br><sup>&ddagger;</sup>Indicates Corresponding Author</small></span>
-                </div> 
+                </div>  -->
 
                   <!-- <div class="column has-text-centered">
                     <div class="publication-links">
@@ -112,7 +112,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/AnthonyHuo/SDP" target="_blank"
+                    <a href="https://anonymous.4open.science/r/SDP-14DC" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -457,7 +457,7 @@ End BibTex citation -->
         <div class="content">
 
           <p>
-            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
+            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
             You are free to borrow the of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
