--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
                   </a >
                 </span>
 
+                <!-- Github link -->
+                  <span class="link-block">
+                    <a href="https://drive.google.com/file/d/1So-byi2hNXIrPLsMT1KLaSbJTpRM1pil/view" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Checkpoints</span>
+                  </a >
+                </span>
+
                 <!-- ArXiv abstract Link -->
                 <!-- <span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
