[yixiao] update web.

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
             <h1 class="title is-1 publication-title">Sparse Diffusion Policy:  A Sparse, Reusable, and Flexible Policy for Robot Learning</h1>
              <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-               <span class="author-block">
+               <!-- <span class="author-block">
                 <a href="" target="_blank">Anonymous Authors</a>
+                <span class="author-block"> -->
+                <a href="https://yixiaowang7.github.io" target="_blank">Yixiao Wang</a><sup>1</sup><sup>*</sup><sup>&dagger;</sup></span>
                 <span class="author-block">
-                <!-- <a href="" target="_blank">Yifei Zhang</a><sup>1</sup><sup>*</sup></span>
+                <a href="" target="_blank">Yifei Zhang</a><sup>1</sup><sup>*</sup></span>
                 <span class="author-block">
                 <a href="" target="_blank">Mingxiao Huo</a><sup>2</sup><sup>*</sup><sup>&dagger;</sup></span>
                 <span class="author-block">
@@ -76,15 +78,15 @@
                 <span class="author-block">
                 <a href="" target="_blank">Mingyu Ding</a><sup>1</sup><sup>&ddagger;</sup></span>
                 <span class="author-block">
-                <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span> -->
+                <a href="" target="_blank">Masayoshi Tomizuka</a><sup>1</sup></span>
                 </div>
-                <!-- <div class="is-size-5 publication-authors">
+                <div class="is-size-5 publication-authors">
                     <span class="author-block"><sup>1</sup>University of California, Berkeley</span>
                     <span class="author-block"><sup>2</sup>Carnegie Mellon University</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                     <span class="eql-cntrb"><small><br><sup>&dagger;</sup>Indicates Project Lead</small></span>
                     <span class="eql-cntrb"><small><br><sup>&ddagger;</sup>Indicates Corresponding Author</small></span>
-                </div>  -->
+                </div> 
 
                   <!-- <div class="column has-text-centered">
                     <div class="publication-links">
@@ -450,15 +452,23 @@
   </section> -->
 <!--End paper poster -->
 
-<!--
-BibTex citation
+
+<!-- BibTex citation -->
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{wang2024sparsediffusionpolicysparse,
+        title={Sparse Diffusion Policy: A Sparse, Reusable, and Flexible Policy for Robot Learning}, 
+        author={Yixiao Wang and Yifei Zhang and Mingxiao Huo and Ran Tian and Xiang Zhang and Yichen Xie and Chenfeng Xu and Pengliang Ji and Wei Zhan and Mingyu Ding and Masayoshi Tomizuka},
+        year={2024},
+        eprint={2407.01531},
+        archivePrefix={arXiv},
+        primaryClass={cs.RO},
+        url={https://arxiv.org/abs/2407.01531}, 
+  }</code></pre>
     </div>
 </section>
-End BibTex citation -->
+<!-- End BibTex citation -->
 
 
   <!--<footer class="footer">
