[yixiao] update web.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://anonymous.4open.science/r/SDP-14DC" target="_blank"
+                    <a href="https://github.com/AnthonyHuo/SDP" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -124,6 +124,17 @@
                 </span>
 
                 <!-- Github link -->
+                <!-- <span class="link-block">
+                  <a href="https://anonymous.4open.science/r/SDP-14DC" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                </a >
+              </span> -->
+
+                <!-- checkpoints link -->
                   <span class="link-block">
                     <a href="https://drive.google.com/file/d/1So-byi2hNXIrPLsMT1KLaSbJTpRM1pil/view" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
