[yixiao] update bibtex.

--- a/index.html
+++ b/index.html
@@ -468,15 +468,12 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{wang2024sparsediffusionpolicysparse,
-        title={Sparse Diffusion Policy: A Sparse, Reusable, and Flexible Policy for Robot Learning}, 
-        author={Yixiao Wang and Yifei Zhang and Mingxiao Huo and Ran Tian and Xiang Zhang and Yichen Xie and Chenfeng Xu and Pengliang Ji and Wei Zhan and Mingyu Ding and Masayoshi Tomizuka},
-        year={2024},
-        eprint={2407.01531},
-        archivePrefix={arXiv},
-        primaryClass={cs.RO},
-        url={https://arxiv.org/abs/2407.01531}, 
-  }</code></pre>
+      <pre><code>@article{wang2024sparse,
+        title={Sparse Diffusion Policy: A Sparse, Reusable, and Flexible Policy for Robot Learning},
+        author={Wang, Yixiao and Zhang, Yifei and Huo, Mingxiao and Tian, Ran and Zhang, Xiang and Xie, Yichen and Xu, Chenfeng and Ji, Pengliang and Zhan, Wei and Ding, Mingyu and others},
+        journal={arXiv preprint arXiv:2407.01531},
+        year={2024}
+      }</code></pre>
     </div>
 </section>
 <!-- End BibTex citation -->
