[yixiao] Update the paper and conference-venue

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                     <span class="eql-cntrb"><small><br><sup>&ddagger;</sup>Indicates Corresponding Author</small></span>
                 </div> 
 
+                <div class="conference-venue">
+                    <span>CoRL 2024</span>
+                </div>
+
                   <!-- <div class="column has-text-centered">
                     <div class="publication-links">
                          Arxiv PDF link -->
@@ -100,6 +104,18 @@
                         <span>Paper</span>
                       </a>
                     </span> --> 
+
+                    <!-- Paper PDF link -->
+                    <span class="link-block">
+                      <a href="static/pdfs/paper.pdf" target="_blank"
+                        class="external-link button is-normal is-rounded is-dark">
+                        <span class="icon">
+                          <i class="fas fa-file-pdf"></i>
+                        </span>
+                        <span>Paper</span>
+                      </a>
+                    </span>
+
 
                     <!-- Supplementary PDF link -->
                     <span class="link-block">
@@ -505,3 +521,9 @@
 
   </body>
   </html>
+
+
+
+
+
+
