[yixiao] update posters.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,16 @@
                         <span>Paper</span>
                       </a>
                     </span>
-
+                    
+                    <span class="link-block">
+                      <a href="static/pdfs/corl2024_poster_sdp.pdf" target="_blank"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-clipboard"></i>
+                      </span>
+                      <span>Poster</span>
+                    </a >
+                    </span>
 
                     <!-- Supplementary PDF link -->
                     <span class="link-block">
@@ -196,6 +205,16 @@
   </div>
 </section> -->
 
+<section class="hero image-section">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img src="static/images/corl2024_poster_sdp.png" alt="Description of image" style="width: 100%; height: auto;">
+      <h2 class="subtitle has-text-centered" style="font-size: 16px;">
+        CoRL 2024 Poster.
+      </h2>
+    </div>
+  </div>
+</section>
 
 <style>
   .video-container {
@@ -265,6 +284,7 @@
   </div>
 </section>
 <!-- End paper abstract -->
+
 
 <!-- New image section -->
 <section class="hero image-section">
